-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.2.1
-
None
-
-
ca54be7882ad1cdce59b30146abd8bdb6f464298 (qt/qtdeclarative/6.2) e9bdafcfad0f09d15b710a3bca5acae2604c14bc (qt/qtdeclarative/dev)
If a Slider has a negative width, the application crash.
Here is the code to reproduce:
import QtQuick import QtQuick.Window import QtQuick.Controls Window { width: 640 height: 480 visible: true title: qsTr("Hello World") Slider { width: -100 } }
The workaround is to add a condition to the visible property:
visible: width > 0
For Gerrit Dashboard: QTBUG-98730 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
384519,3 | Don't dereference nullptr when updating materials | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
384855,2 | Do not return a node from styleitem when there is nothing to render | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
385073,2 | Do not return a node from styleitem when there is nothing to render | 6.2 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
385164,3 | Don't dereference nullptr when updating materials | 6.2 | qt/qtdeclarative | Status: MERGED | +2 | 0 |