Don't dereference nullptr when updating materials

If a texture is nullptr (perhaps because the item has a null-size),
then the material's texture will be nullptr.

Add a testcase; with native slides, a negative-width slider used
to generate a scene graph node violating the preconditions and
resulting in a crash.

Fixes: QTBUG-98730
Change-Id: Ica5e8b390f1a2607a5fcc255d6f74a020565319b
Reviewed-by: Laszlo Agocs <laszlo.agocs@qt.io>
Reviewed-by: Mitch Curtis <mitch.curtis@qt.io>
(cherry picked from commit e9bdafcfad0f09d15b710a3bca5acae2604c14bc)
Reviewed-by: Volker Hilsheimer <volker.hilsheimer@qt.io>