tests/auto/quickcontrols2/controls/data/tst_slider.qml
@@ -944,4 +944,11 @@ TestCase {
 
         touch.release(0, control, x0 + data.dx2, y0 + data.dy2).commit()
     }
+
+    function test_nullTexture() {
+        var control = createTemporaryObject(slider, testCase, {width: -100})
+        verify(control)
+        control.visible = true
+        waitForRendering(control)
+    }
 }
